Bug 1129859 -  Wrong dictionary chosen when lang attribute is en-US on some Linux distros. r=roc

--HG--
rename : extensions/spellcheck/hunspell/tests/unit/data/1463589_utf.aff => extensions/spellcheck/hunspell/tests/unit/data/1463589-utf.aff
rename : extensions/spellcheck/hunspell/tests/unit/data/1463589_utf.dic => extensions/spellcheck/hunspell/tests/unit/data/1463589-utf.dic
rename : extensions/spellcheck/hunspell/tests/unit/data/1463589_utf.sug => extensions/spellcheck/hunspell/tests/unit/data/1463589-utf.sug
rename : extensions/spellcheck/hunspell/tests/unit/data/1463589_utf.test => extensions/spellcheck/hunspell/tests/unit/data/1463589-utf.test
rename : extensions/spellcheck/hunspell/tests/unit/data/1463589_utf.wrong => extensions/spellcheck/hunspell/tests/unit/data/1463589-utf.wrong
rename : extensions/spellcheck/hunspell/tests/unit/data/allcaps_utf.aff => extensions/spellcheck/hunspell/tests/unit/data/allcaps-utf.aff
rename : extensions/spellcheck/hunspell/tests/unit/data/allcaps_utf.dic => extensions/spellcheck/hunspell/tests/unit/data/allcaps-utf.dic
rename : extensions/spellcheck/hunspell/tests/unit/data/allcaps_utf.good => extensions/spellcheck/hunspell/tests/unit/data/allcaps-utf.good
rename : extensions/spellcheck/hunspell/tests/unit/data/allcaps_utf.sug => extensions/spellcheck/hunspell/tests/unit/data/allcaps-utf.sug
rename : extensions/spellcheck/hunspell/tests/unit/data/allcaps_utf.test => extensions/spellcheck/hunspell/tests/unit/data/allcaps-utf.test
rename : extensions/spellcheck/hunspell/tests/unit/data/allcaps_utf.wrong => extensions/spellcheck/hunspell/tests/unit/data/allcaps-utf.wrong
rename : extensions/spellcheck/hunspell/tests/unit/data/base_utf.aff => extensions/spellcheck/hunspell/tests/unit/data/base-utf.aff
rename : extensions/spellcheck/hunspell/tests/unit/data/base_utf.dic => extensions/spellcheck/hunspell/tests/unit/data/base-utf.dic
rename : extensions/spellcheck/hunspell/tests/unit/data/base_utf.good => extensions/spellcheck/hunspell/tests/unit/data/base-utf.good
rename : extensions/spellcheck/hunspell/tests/unit/data/base_utf.sug => extensions/spellcheck/hunspell/tests/unit/data/base-utf.sug
rename : extensions/spellcheck/hunspell/tests/unit/data/base_utf.test => extensions/spellcheck/hunspell/tests/unit/data/base-utf.test
rename : extensions/spellcheck/hunspell/tests/unit/data/base_utf.wrong => extensions/spellcheck/hunspell/tests/unit/data/base-utf.wrong
rename : extensions/spellcheck/hunspell/tests/unit/data/colons_in_words.aff => extensions/spellcheck/hunspell/tests/unit/data/colons-in-words.aff
rename : extensions/spellcheck/hunspell/tests/unit/data/colons_in_words.dic => extensions/spellcheck/hunspell/tests/unit/data/colons-in-words.dic
rename : extensions/spellcheck/hunspell/tests/unit/data/colons_in_words.test => extensions/spellcheck/hunspell/tests/unit/data/colons-in-words.test
rename : extensions/spellcheck/hunspell/tests/unit/data/condition_utf.aff => extensions/spellcheck/hunspell/tests/unit/data/condition-utf.aff
rename : extensions/spellcheck/hunspell/tests/unit/data/condition_utf.dic => extensions/spellcheck/hunspell/tests/unit/data/condition-utf.dic
rename : extensions/spellcheck/hunspell/tests/unit/data/condition_utf.good => extensions/spellcheck/hunspell/tests/unit/data/condition-utf.good
rename : extensions/spellcheck/hunspell/tests/unit/data/condition_utf.test => extensions/spellcheck/hunspell/tests/unit/data/condition-utf.test
rename : extensions/spellcheck/hunspell/tests/unit/data/condition_utf.wrong => extensions/spellcheck/hunspell/tests/unit/data/condition-utf.wrong
rename : extensions/spellcheck/hunspell/tests/unit/data/digits_in_words.aff => extensions/spellcheck/hunspell/tests/unit/data/digits-in-words.aff
rename : extensions/spellcheck/hunspell/tests/unit/data/digits_in_words.dic => extensions/spellcheck/hunspell/tests/unit/data/digits-in-words.dic
rename : extensions/spellcheck/hunspell/tests/unit/data/digits_in_words.test => extensions/spellcheck/hunspell/tests/unit/data/digits-in-words.test
rename : extensions/spellcheck/hunspell/tests/unit/data/digits_in_words.wrong => extensions/spellcheck/hunspell/tests/unit/data/digits-in-words.wrong
rename : extensions/spellcheck/hunspell/tests/unit/data/ngram_utf_fix.aff => extensions/spellcheck/hunspell/tests/unit/data/ngram-utf-fix.aff
rename : extensions/spellcheck/hunspell/tests/unit/data/ngram_utf_fix.dic => extensions/spellcheck/hunspell/tests/unit/data/ngram-utf-fix.dic
rename : extensions/spellcheck/hunspell/tests/unit/data/ngram_utf_fix.good => extensions/spellcheck/hunspell/tests/unit/data/ngram-utf-fix.good
rename : extensions/spellcheck/hunspell/tests/unit/data/ngram_utf_fix.sug => extensions/spellcheck/hunspell/tests/unit/data/ngram-utf-fix.sug
rename : extensions/spellcheck/hunspell/tests/unit/data/ngram_utf_fix.test => extensions/spellcheck/hunspell/tests/unit/data/ngram-utf-fix.test
rename : extensions/spellcheck/hunspell/tests/unit/data/ngram_utf_fix.wrong => extensions/spellcheck/hunspell/tests/unit/data/ngram-utf-fix.wrong
rename : extensions/spellcheck/hunspell/tests/unit/data/opentaal_cpdpat.aff => extensions/spellcheck/hunspell/tests/unit/data/opentaal-cpdpat.aff
rename : extensions/spellcheck/hunspell/tests/unit/data/opentaal_cpdpat.dic => extensions/spellcheck/hunspell/tests/unit/data/opentaal-cpdpat.dic
rename : extensions/spellcheck/hunspell/tests/unit/data/opentaal_cpdpat.good => extensions/spellcheck/hunspell/tests/unit/data/opentaal-cpdpat.good
rename : extensions/spellcheck/hunspell/tests/unit/data/opentaal_cpdpat.test => extensions/spellcheck/hunspell/tests/unit/data/opentaal-cpdpat.test
rename : extensions/spellcheck/hunspell/tests/unit/data/opentaal_cpdpat.wrong => extensions/spellcheck/hunspell/tests/unit/data/opentaal-cpdpat.wrong
rename : extensions/spellcheck/hunspell/tests/unit/data/opentaal_cpdpat2.aff => extensions/spellcheck/hunspell/tests/unit/data/opentaal-cpdpat2.aff
rename : extensions/spellcheck/hunspell/tests/unit/data/opentaal_cpdpat2.dic => extensions/spellcheck/hunspell/tests/unit/data/opentaal-cpdpat2.dic
rename : extensions/spellcheck/hunspell/tests/unit/data/opentaal_cpdpat2.good => extensions/spellcheck/hunspell/tests/unit/data/opentaal-cpdpat2.good
rename : extensions/spellcheck/hunspell/tests/unit/data/opentaal_cpdpat2.test => extensions/spellcheck/hunspell/tests/unit/data/opentaal-cpdpat2.test
rename : extensions/spellcheck/hunspell/tests/unit/data/opentaal_cpdpat2.wrong => extensions/spellcheck/hunspell/tests/unit/data/opentaal-cpdpat2.wrong
rename : extensions/spellcheck/hunspell/tests/unit/data/opentaal_forbiddenword1.aff => extensions/spellcheck/hunspell/tests/unit/data/opentaal-forbiddenword1.aff
rename : extensions/spellcheck/hunspell/tests/unit/data/opentaal_forbiddenword1.dic => extensions/spellcheck/hunspell/tests/unit/data/opentaal-forbiddenword1.dic
rename : extensions/spellcheck/hunspell/tests/unit/data/opentaal_forbiddenword1.good => extensions/spellcheck/hunspell/tests/unit/data/opentaal-forbiddenword1.good
rename : extensions/spellcheck/hunspell/tests/unit/data/opentaal_forbiddenword1.sug => extensions/spellcheck/hunspell/tests/unit/data/opentaal-forbiddenword1.sug
rename : extensions/spellcheck/hunspell/tests/unit/data/opentaal_forbiddenword1.test => extensions/spellcheck/hunspell/tests/unit/data/opentaal-forbiddenword1.test
rename : extensions/spellcheck/hunspell/tests/unit/data/opentaal_forbiddenword1.wrong => extensions/spellcheck/hunspell/tests/unit/data/opentaal-forbiddenword1.wrong
rename : extensions/spellcheck/hunspell/tests/unit/data/opentaal_forbiddenword2.aff => extensions/spellcheck/hunspell/tests/unit/data/opentaal-forbiddenword2.aff
rename : extensions/spellcheck/hunspell/tests/unit/data/opentaal_forbiddenword2.dic => extensions/spellcheck/hunspell/tests/unit/data/opentaal-forbiddenword2.dic
rename : extensions/spellcheck/hunspell/tests/unit/data/opentaal_forbiddenword2.good => extensions/spellcheck/hunspell/tests/unit/data/opentaal-forbiddenword2.good
rename : extensions/spellcheck/hunspell/tests/unit/data/opentaal_forbiddenword2.sug => extensions/spellcheck/hunspell/tests/unit/data/opentaal-forbiddenword2.sug
rename : extensions/spellcheck/hunspell/tests/unit/data/opentaal_forbiddenword2.test => extensions/spellcheck/hunspell/tests/unit/data/opentaal-forbiddenword2.test
rename : extensions/spellcheck/hunspell/tests/unit/data/opentaal_forbiddenword2.wrong => extensions/spellcheck/hunspell/tests/unit/data/opentaal-forbiddenword2.wrong
rename : extensions/spellcheck/hunspell/tests/unit/data/opentaal_keepcase.aff => extensions/spellcheck/hunspell/tests/unit/data/opentaal-keepcase.aff
rename : extensions/spellcheck/hunspell/tests/unit/data/opentaal_keepcase.dic => extensions/spellcheck/hunspell/tests/unit/data/opentaal-keepcase.dic
rename : extensions/spellcheck/hunspell/tests/unit/data/opentaal_keepcase.good => extensions/spellcheck/hunspell/tests/unit/data/opentaal-keepcase.good
rename : extensions/spellcheck/hunspell/tests/unit/data/opentaal_keepcase.sug => extensions/spellcheck/hunspell/tests/unit/data/opentaal-keepcase.sug
rename : extensions/spellcheck/hunspell/tests/unit/data/opentaal_keepcase.test => extensions/spellcheck/hunspell/tests/unit/data/opentaal-keepcase.test
rename : extensions/spellcheck/hunspell/tests/unit/data/opentaal_keepcase.wrong => extensions/spellcheck/hunspell/tests/unit/data/opentaal-keepcase.wrong
rename : extensions/spellcheck/hunspell/tests/unit/data/utf8_bom.aff => extensions/spellcheck/hunspell/tests/unit/data/utf8-bom.aff
rename : extensions/spellcheck/hunspell/tests/unit/data/utf8_bom.dic => extensions/spellcheck/hunspell/tests/unit/data/utf8-bom.dic
rename : extensions/spellcheck/hunspell/tests/unit/data/utf8_bom.good => extensions/spellcheck/hunspell/tests/unit/data/utf8-bom.good
rename : extensions/spellcheck/hunspell/tests/unit/data/utf8_bom.test => extensions/spellcheck/hunspell/tests/unit/data/utf8-bom.test
rename : extensions/spellcheck/hunspell/tests/unit/data/utf8_bom2.aff => extensions/spellcheck/hunspell/tests/unit/data/utf8-bom2.aff
rename : extensions/spellcheck/hunspell/tests/unit/data/utf8_bom2.dic => extensions/spellcheck/hunspell/tests/unit/data/utf8-bom2.dic
rename : extensions/spellcheck/hunspell/tests/unit/data/utf8_bom2.good => extensions/spellcheck/hunspell/tests/unit/data/utf8-bom2.good
rename : extensions/spellcheck/hunspell/tests/unit/data/utf8_bom2.test => extensions/spellcheck/hunspell/tests/unit/data/utf8-bom2.test
rename : extensions/spellcheck/hunspell/tests/unit/data/utf8_nonbmp.aff => extensions/spellcheck/hunspell/tests/unit/data/utf8-nonbmp.aff
rename : extensions/spellcheck/hunspell/tests/unit/data/utf8_nonbmp.dic => extensions/spellcheck/hunspell/tests/unit/data/utf8-nonbmp.dic
rename : extensions/spellcheck/hunspell/tests/unit/data/utf8_nonbmp.good => extensions/spellcheck/hunspell/tests/unit/data/utf8-nonbmp.good
rename : extensions/spellcheck/hunspell/tests/unit/data/utf8_nonbmp.sug => extensions/spellcheck/hunspell/tests/unit/data/utf8-nonbmp.sug
rename : extensions/spellcheck/hunspell/tests/unit/data/utf8_nonbmp.test => extensions/spellcheck/hunspell/tests/unit/data/utf8-nonbmp.test
rename : extensions/spellcheck/hunspell/tests/unit/data/utf8_nonbmp.wrong => extensions/spellcheck/hunspell/tests/unit/data/utf8-nonbmp.wrong
extra : rebase_source : 09ef9975419ce11e104ce2792c2f0f3364f6db8d